<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".ui.fragment.HomeFragment">

        <ImageView
            android:id="@+id/ic_sun"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/sun"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/search_view_border"
            android:queryBackground="@android:color/transparent"
            android:queryHint="Search"
            app:layout_constraintBottom_toBottomOf="@+id/ic_sun" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/pic_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/searchView">

            <ImageView
                android:id="@+id/ic_pic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/pic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="7dp"
                android:padding="5dp"
                android:text="@string/message"
                android:textColor="@color/white"
                android:textSize="23sp"
                app:layout_constraintBottom_toTopOf="@+id/tv_discover"
                app:layout_constraintStart_toStartOf="@+id/ic_pic" />

            <TextView
                android:id="@+id/tv_discover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginBottom="35dp"
                android:background="@drawable/text_view_border"
                android:paddingStart="16dp"
                android:paddingTop="5dp"
                android:paddingEnd="16dp"
                android:paddingBottom="5dp"
                android:text="@string/discover"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/ic_pic"
                app:layout_constraintStart_toStartOf="@+id/ic_pic" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/categories"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/pic_container" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_categories"
            tools:itemCount="3"
            tools:listitem="@layout/category_item" />

        <TextView
            android:id="@+id/tv_products"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/most_popular"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/recCategories" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recProducts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:nestedScrollingEnabled="false"
            app:layout_constraintTop_toBottomOf="@+id/tv_products"
            tools:itemCount="3"
            tools:listitem="@layout/product_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
