<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/constraint_add_to_basket" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_shoping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@android:color/transparent"
        android:backgroundTint="@color/red"
        android:gravity="center"
        android:layout_margin="13dp"
        android:src="@drawable/shopping_cart"
        android:visibility="visible"
        app:borderWidth="0dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_add_to_basket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/searchView_back_color"
        android:padding="10dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_add_to_basket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/text_view_border"
            android:gravity="center"
            android:paddingStart="26dp"
            android:paddingTop="10dp"
            android:paddingEnd="26dp"
            android:paddingBottom="10dp"
            android:text="@string/add_to_basket"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/product_count_container"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:orientation="horizontal"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tv_minus"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/minus"
                android:textColor="@color/red"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_count"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="1"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_minus"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/plus"
                android:textColor="@color/red"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_count"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>